--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".TelaInicial"
-            android:label="@string/title_activity_main_window"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:name=".InsertDebts"
+            android:label="@string/title_activity_insert_debts"
+            android:theme="@style/AppTheme2">
+        </activity>
+
     </application>
 
 </manifest>
